CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.21rc1

	- The cupstestppd program did not allow a default choice
	  of "Unknown" as required by the PPD spec (STR #651)
	- The select() buffers are now allocated to be at least
	  as large as sizeof(fd_set) (STR #639)
	- The LPD backend now supports overriding the print job
	  username via the device URI (STR #631)
	- The scheduler did not handle an unknown MIME type when
	  checking for a CGI script (STR #603)
	- Added a timeout optimization to the scheduler's main
	  loop to allow CUPS to sleep more of the time (STR
	  #629)
	- The USB backend now retries printing to devices of the
	  form "usb://make/model" if any USB port shows up as
	  "busy" (STR #617)
	- The httpGetHostByName() function did not range check
	  IP address values (STR #608)
	- The httpUpdate() function could return HTTP_ERROR
	  instead of the HTTP status if the server closed the
	  connection before the client received the whole
	  response (STR #611)
	- The LPD mini-daemon did not allow the administrator to
	  force banner pages on (STR #605)
	- Added PAM support for Darwin/MacOS X (STR #550)
	- The web interface now provides a "Set As Default"
	  button to set the default printer or class on a server
	  (STR #577)
	- The HTTP authentication cache was broken (STR #517)
	- The cupstestppd utility now fails PPD files that have
	  a DefaultOption keyword for a non-existance option
	  name (STR #476)
	- Optimized the scanning of new PPD files on scheduler
	  startup (STR #424)
	- The EPM list file did not include the bin, lib, or
	  sbin directories (STR #598)
	- The web interface did not redirect administration
	  tasks to the primary server for a class or printer
	  (STR #491, #652)
	- The cups-lpd mini-daemon did not reject print jobs to
	  queues that were rejecting new print jobs (STR #515)
	- Some calls to the ctype functions did not account for
	  platforms that use a signed char type by default (STR
	  #518)